--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
     "cordova-custom-config": "5.0.2",
     "cordova-plugin-splashscreen": "5.0.1",
     "cordova-plugin-whitelist": "1.3.3",
-    "mobi.monaca.plugins.Monaca": "3.1.0"
+    "monaca-plugin-monaca-core": "3.2.0"
   },
   "cordova": {
     "plugins": {
       "cordova-plugin-whitelist": {},
       "cordova-plugin-splashscreen": {},
       "cordova-custom-config": {},
-      "mobi.monaca.plugins.Monaca": {}
+      "monaca-plugin-monaca-core": {}
     }
   }
 }
