--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "monaca:preview": "npm run dev",
-    "dev": "browser-sync start -s www/ --watch"
+    "dev": "browser-sync start -s www/ --watch --port 8080 --ui-port 8081"
   },
   "cordova": {
     "plugins": {
