--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "monaca-template-minimum",
+  "version": "2.0.0",
   "displayName": "Monaca Template Minimum",
   "dependencies": {
     "cordova-custom-config": "5.1.0",
@@ -20,7 +21,7 @@
     }
   },
   "devDependencies": {
-    "browser-sync": "^2.26.5",
+    "browser-sync": "^2.26.7",
     "cordova": "^9.0.0"
   }
 }
